k8s-manifests/vote/allow-result-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-result-to-db
spec:
  podSelector:
    matchLabels:
      app: db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: result
      ports:
        - protocol: TCP
          port: 5432
  policyTypes:
    - Ingress
