k8s-manifests/vote/allow-vote-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vote-to-redis
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: vote
      ports:
        - protocol: TCP
          port: 6379
  policyTypes:
    - Ingress
